@@ -1,3 +1,4 @@
+* Regenerate ntp_parser.[ch] from ntp_parser.y
 (4.2.5p132) 2008/09/15 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1067] Multicast DNS service registration must come after the fork
   on Solaris.
